return search term if exists to template instead of boolean
